fix(api):TRI-1016 Review and fix new SonarCloud findings